# nbgrader-k8s

./: LICENSE  README.md
images/: hub.Dockerfile  instructor.Dockerfile  student.Dockerfile
nbgrader-chart/: Chart.yaml  values.yaml
nbgrader-chart/templates/: _helpers.tpl  cm.yaml  pvc.yaml  svc.yaml
nbgrader-exchange/: README.md  pyproject.toml
nbgrader-exchange/nbgrader_k8s_exchange/plugin/: collect.py  fetch_feedback.py  list.py  release_feedback.py  submit.py
