[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nbgrader-k8s-exchange"
version = "0.0.1"
authors = [
  { name="CERIT-SC", email="support@cerit-sc.cz"},
]
description = "K8s compatibe exchange for nbgrader"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CERIT-SC/nbgrader-k8s"
"Bug Tracker" = "https://github.com/CERIT-SC/nbgrader-k8s/issues"

dependencies = [
  "nbgrader==0.9.1",
]